made some changes to the web design template

--- a/index.html
+++ b/index.html
@@ -84,6 +84,47 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3>Headings Showcase</h3>
+            <div class="font-showcase">
+                <!-- Roboto -->
+                <div class="font-block">
+                    <h1 class="roboto-bold" style="font-size:2.2rem; margin-bottom:0.5rem;">Roboto Title</h1>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a title heading</div>
+                    <h2 class="roboto-bold" style="font-size:1.5rem; margin-bottom:0.5rem;">Roboto Section Title</h2>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a section title heading</div>
+                    <h3 class="roboto-regular" style="font-size:1.15rem; margin-bottom:0.5rem;">Roboto Subheading</h3>
+                    <div style="color:#666;">This is a subheading</div>
+                </div>
+                <!-- Open Sans -->
+                <div class="font-block">
+                    <h1 class="open-sans-bold" style="font-size:2.2rem; margin-bottom:0.5rem;">Open Sans Title</h1>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a title heading</div>
+                    <h2 class="open-sans-bold" style="font-size:1.5rem; margin-bottom:0.5rem;">Open Sans Section Title</h2>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a section title heading</div>
+                    <h3 class="open-sans-regular" style="font-size:1.15rem; margin-bottom:0.5rem;">Open Sans Subheading</h3>
+                    <div style="color:#666;">This is a subheading</div>
+                </div>
+                <!-- Lora -->
+                <div class="font-block">
+                    <h1 class="lora-bold" style="font-size:2.2rem; margin-bottom:0.5rem;">Lora Title</h1>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a title heading</div>
+                    <h2 class="lora-bold" style="font-size:1.5rem; margin-bottom:0.5rem;">Lora Section Title</h2>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a section title heading</div>
+                    <h3 class="lora-regular" style="font-size:1.15rem; margin-bottom:0.5rem;">Lora Subheading</h3>
+                    <div style="color:#666;">This is a subheading</div>
+                </div>
+                <!-- Montserrat -->
+                <div class="font-block">
+                    <h1 class="montserrat-bold" style="font-size:2.2rem; margin-bottom:0.5rem;">Montserrat Title</h1>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a title heading</div>
+                    <h2 class="montserrat-bold" style="font-size:1.5rem; margin-bottom:0.5rem;">Montserrat Section Title</h2>
+                    <div style="margin-bottom:1.2rem; color:#666;">This is a section title heading</div>
+                    <h3 class="montserrat-regular" style="font-size:1.15rem; margin-bottom:0.5rem;">Montserrat Subheading</h3>
+                    <div style="color:#666;">This is a subheading</div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
